# hal_rp_demo

./: CMakeLists.txt
include/dt-bindings/pinctrl/: rp2040-pinctrl.h
pico-sdk/: CMakeLists.txt
pico-sdk/pico/: config_autogen.h
pico-sdk/src/common/pico_base/include/pico/: types.h
